objects/cic_credit__FieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cic_credit__Birthdate__c</fullName>
        <label>Birthdate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Phone__c</fullName>
        <label>Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__SSN__c</fullName>
        <label>SSN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>FieldMapping</label>
</CustomObject>